--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
 anyio==3.5.0
 asgiref==3.5.0
+attrs==21.4.0
 click==8.0.3
 Deprecated==1.2.13
 fastapi==0.72.0
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
+iniconfig==1.1.1
 packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 pydantic==1.9.0
 pyparsing==3.0.7
+pytest==6.2.5
 python-dotenv==0.19.2
 PyYAML==6.0
 redis==4.1.1
 sniffio==1.2.0
 starlette==0.17.1
+toml==0.10.2
 typing_extensions==4.0.1
 uvicorn==0.17.0
 uvloop==0.16.0
