--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 anyio==3.5.0
 asgiref==3.5.0
 attrs==21.4.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==8.0.3
 Deprecated==1.2.13
+dnspython==2.2.0
+email-validator==1.1.3
 fastapi==0.72.0
 h11==0.13.0
-httptools==0.3.0
+httptools==0.2.0
 idna==3.3
 iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+orjson==3.6.6
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
@@ -15,13 +23,18 @@ pydantic==1.9.0
 pyparsing==3.0.7
 pytest==6.2.5
 python-dotenv==0.19.2
-PyYAML==6.0
+python-multipart==0.0.5
+PyYAML==5.4.1
 redis==4.1.1
+requests==2.27.1
+six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
 toml==0.10.2
 typing_extensions==4.0.1
-uvicorn==0.17.0
+ujson==4.3.0
+urllib3==1.26.8
+uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
 websockets==10.1
