--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.10
 click==8.0.3
+decorator==5.1.1
 Deprecated==1.2.13
 dnspython==2.2.0
 email-validator==1.1.3
@@ -36,6 +37,7 @@ ujson==4.3.0
 urllib3==1.26.8
 uvicorn==0.15.0
 uvloop==0.16.0
+validators==0.18.2
 watchgod==0.7
 websockets==10.1
 wrapt==1.13.3
